yaml deploy/wiremock.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiremock-deployment
  labels:
    app: wiremock
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wiremock
  template:
    metadata:
      labels:
        app: wiremock
    spec:
      containers:
        - name: wiremock
          image: wiremock/wiremock:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /home/wiremock/__files
              name: files-volume
            - mountPath: /home/wiremock/mappings
              name: mappings-volume
      volumes:
        - name: files-volume
          persistentVolumeClaim:
            claimName: wiremock-files-pvc
        - name: mappings-volume
          persistentVolumeClaim:
            claimName: wiremock-mappings-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: wiremock-service
  labels:
    app: wiremock
spec:
  type: ClusterIP
  selector:
    app: wiremock
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
