yaml deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/secure-backends: "true"
  name: mock-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: local.wiremock.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wiremock-service
                port:
                  number: 8080
